fixed product card align

--- a/src/sass/components/products.scss
+++ b/src/sass/components/products.scss
@@ -4,7 +4,6 @@
 
 .products__list {
   align-items: stretch;
-  justify-content: center;
   margin-bottom: 0.125rem;
 }
 
