--- a/src/sass/general/page-basics.scss
+++ b/src/sass/general/page-basics.scss
@@ -367,12 +367,11 @@
     max-width: 75%;
 
     &:first-child {
-      max-width: 100%;
+      &:last-child {
+        max-width: 100%;
+      }
     }
 
-    &:last-child {
-      max-width: 100%;
-    }
   }
 
   .content__body__block {
